--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@ body, html{
 }
 #canvas{
   background-color : white;
+  background : url("../images/graph_paper_tile.gif");
 }
 #overlay{
   position: absolute;
@@ -108,6 +109,62 @@ li, .file {
   padding : 5px 10px 5px 10px;
 }
 
-textarea, input{ 
-  outline:none;
+textarea{
+  font-size : 10px;
+  outline: 1px solid #cccccc;
+}
+
+
+
+.nodename {
+  font-size : 10px;
+  border : none;
+  color : black;
+}
+.nodecomp {
+  display : none;
+}
+
+#compview {
+  display : none;
+  position : absolute;
+  z-index : 100000;
+  height : 400px;
+  width : 400px;
+  top : 200px;
+  left : 200px;
+  border : 1px solid gray;
+  color : white;
+  padding : 4px;
+}
+#compviewbox {
+  display : -moz-box;
+  display : -o-box;
+  display : -webkit-box;
+  display : box;
+}
+#compviewheader {
+  position : relative;
+  background-color : black;
+  top : 2px;
+  right : 2px;
+  width : 100%;
+  color: white;
+  cursor : pointer;
+  font-size : 12px;
+}
+#compviewclose {
+  float : right;
+  position : relative;
+  background-color : black;
+  top : 2px;
+  right : 2px;
+  color: white;
+  cursor : pointer;
+  font-size : 12px;
+}
+#compviewtxt {
+  width : 95%;
+  height : 90%;
+  margin : 10px;
 }
