Enabled scrolling on individual nodes details. Enabled scrolling on the entire page, though canvas rolling hits a browser bug at the moment.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,10 @@
 body, html{
   margin : 0;
   padding : 0;
-  overflow : hidden;
+  overflow : scroll;
 }
 #canvas{
+  overflow : visible;
   background-color : white;
   background : url("../images/graph_paper_tile.gif");
 }
